k8s/docker-desktop/11-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: linuxmaster
  labels:
    app: linuxmaster
    tier: web
    env: prod
spec:
  type: ClusterIP
  selector:
    app: linuxmaster
    tier: web
    env: prod
  ports:
    - name: http
      port: 80
      targetPort: 5000
