k8s/docker-desktop/12-web-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-nodeport
  namespace: linuxmaster
  labels:
    app: linuxmaster
    tier: web
    env: prod
spec:
  type: NodePort
  selector:
    app: linuxmaster
    tier: web
    env: prod
  ports:
    - name: http
      port: 80
      targetPort: 5000
      nodePort: 30080
